vcluster-gitops/argocd/flux/manifests/headlamp.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: headlamp
